Tools/Convert_GL.h_and_GLext.h_C-Include/oglGLext.h

typedef char GLchar;
typedef struct __GLsync *GLsync;
typedef khronos_uint64_t GLuint64;
typedef khronos_int64_t GLint64;
 GLenum  glClientWaitSync (GLsync sync, GLbitfield flags, GLuint64 timeout);
 void  glWaitSync (GLsync sync, GLbitfield flags, GLuint64 timeout);
 void  glGetInteger64v (GLenum pname, GLint64 *data);
 void  glGetSynciv (GLsync sync, GLenum pname, GLsizei count, GLsizei *length, GLint *values);
 void  glGetInteger64i_v (GLenum target, GLuint index, GLint64 *data);
 void  glGetBufferParameteri64v (GLenum target, GLenum pname, GLint64 *params);
 void  glFramebufferTexture (GLenum target, GLenum attachment, GLuint texture, GLint level);
 void  glTexImage2DMultisample (GLenum target, GLsizei samples, GLenum internalformat, GLsizei width, GLsizei height, GLboolean fixedsamplelocations);
 void  glTexImage3DMultisample (GLenum target, GLsizei samples, GLenum internalformat, GLsizei width, GLsizei height, GLsizei depth, GLboolean fixedsamplelocations);
 void  glGetMultisamplefv (GLenum pname, GLuint index, GLfloat *val);
 void  glSampleMaski (GLuint maskNumber, GLbitfield mask);
 void  glBindFragDataLocationIndexed (GLuint program_, GLuint colorNumber, GLuint index,GLchar *name);
 GLint  glGetFragDataIndex (GLuint program_,GLchar *name);
 void  glGenSamplers (GLsizei count, GLuint *samplers);
 void  glDeleteSamplers (GLsizei count,GLuint *samplers);
 GLboolean  glIsSampler (GLuint sampler);
 void  glBindSampler (GLuint unit_, GLuint sampler);
 void  glSamplerParameteri (GLuint sampler, GLenum pname, GLint param);
 void  glSamplerParameteriv (GLuint sampler, GLenum pname,GLint *param);
 void  glSamplerParameterf (GLuint sampler, GLenum pname, GLfloat param);
 void  glSamplerParameterfv (GLuint sampler, GLenum pname,GLfloat *param);
 void  glSamplerParameterIiv (GLuint sampler, GLenum pname,GLint *param);
 void  glSamplerParameterIuiv (GLuint sampler, GLenum pname,GLuint *param);
 void  glGetSamplerParameteriv (GLuint sampler, GLenum pname, GLint *params);
 void  glGetSamplerParameterIiv (GLuint sampler, GLenum pname, GLint *params);
 void  glGetSamplerParameterfv (GLuint sampler, GLenum pname, GLfloat *params);
 void  glGetSamplerParameterIuiv (GLuint sampler, GLenum pname, GLuint *params);
 void  glQueryCounter (GLuint id, GLenum target);
 void  glGetQueryObjecti64v (GLuint id, GLenum pname, GLint64 *params);
 void  glGetQueryObjectui64v (GLuint id, GLenum pname, GLuint64 *params);
 void  glVertexAttribDivisor (GLuint index, GLuint divisor);
 void  glVertexAttribP1ui (GLuint index, GLenum type, GLboolean normalized, GLuint value);
 void  glVertexAttribP1uiv (GLuint index, GLenum type, GLboolean normalized,GLuint *value);
 void  glVertexAttribP2ui (GLuint index, GLenum type, GLboolean normalized, GLuint value);
 void  glVertexAttribP2uiv (GLuint index, GLenum type, GLboolean normalized,GLuint *value);
 void  glVertexAttribP3ui (GLuint index, GLenum type, GLboolean normalized, GLuint value);
 void  glVertexAttribP3uiv (GLuint index, GLenum type, GLboolean normalized,GLuint *value);
 void  glVertexAttribP4ui (GLuint index, GLenum type, GLboolean normalized, GLuint value);
 void  glVertexAttribP4uiv (GLuint index, GLenum type, GLboolean normalized,GLuint *value);
 void  glVertexP2ui (GLenum type, GLuint value);
 void  glVertexP2uiv (GLenum type,GLuint *value);
 void  glVertexP3ui (GLenum type, GLuint value);
 void  glVertexP3uiv (GLenum type,GLuint *value);
 void  glVertexP4ui (GLenum type, GLuint value);
 void  glVertexP4uiv (GLenum type,GLuint *value);
 void  glTexCoordP1ui (GLenum type, GLuint coords);
 void  glTexCoordP1uiv (GLenum type,GLuint *coords);
 void  glTexCoordP2ui (GLenum type, GLuint coords);
 void  glTexCoordP2uiv (GLenum type,GLuint *coords);
 void  glTexCoordP3ui (GLenum type, GLuint coords);
 void  glTexCoordP3uiv (GLenum type,GLuint *coords);
 void  glTexCoordP4ui (GLenum type, GLuint coords);
 void  glTexCoordP4uiv (GLenum type,GLuint *coords);
 void  glMultiTexCoordP1ui (GLenum texture, GLenum type, GLuint coords);
 void  glMultiTexCoordP1uiv (GLenum texture, GLenum type,GLuint *coords);
 void  glMultiTexCoordP2ui (GLenum texture, GLenum type, GLuint coords);
 void  glMultiTexCoordP2uiv (GLenum texture, GLenum type,GLuint *coords);
 void  glMultiTexCoordP3ui (GLenum texture, GLenum type, GLuint coords);
 void  glMultiTexCoordP3uiv (GLenum texture, GLenum type,GLuint *coords);
 void  glMultiTexCoordP4ui (GLenum texture, GLenum type, GLuint coords);
 void  glMultiTexCoordP4uiv (GLenum texture, GLenum type,GLuint *coords);
 void  glNormalP3ui (GLenum type, GLuint coords);
 void  glNormalP3uiv (GLenum type,GLuint *coords);
 void  glColorP3ui (GLenum type, GLuint color);
 void  glColorP3uiv (GLenum type,GLuint *color);
 void  glColorP4ui (GLenum type, GLuint color);
 void  glColorP4uiv (GLenum type,GLuint *color);
 void  glSecondaryColorP3ui (GLenum type, GLuint color);
 void  glSecondaryColorP3uiv (GLenum type,GLuint *color);
 void  glMinSampleShading (GLfloat value);
 void  glBlendEquationi (GLuint buf, GLenum mode);
 void  glBlendEquationSeparatei (GLuint buf, GLenum modeRGB, GLenum modeAlpha);
 void  glBlendFunci (GLuint buf, GLenum src, GLenum dst);
 void  glBlendFuncSeparatei (GLuint buf, GLenum srcRGB, GLenum dstRGB, GLenum srcAlpha, GLenum dstAlpha);
 void  glDrawArraysIndirect (GLenum mode,void *indirect);
 void  glDrawElementsIndirect (GLenum mode, GLenum type,void *indirect);
 void  glUniform1d (GLint location, GLdouble x);